operations/blue-green-with-istio/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: spring-boot-rest
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: spring-boot-rest
  template:
    metadata:
      labels:
        app: spring-boot-rest
    spec:
      containers:
      - name: spring-boot-rest
        image: smartkuk/spring-boot-rest:green
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
  strategy:
    blueGreen:
      activeService: spring-boot-rest
      previewService: spring-boot-rest
      autoPromotionEnabled: false
