operations/blue-green-with-istio/service.yaml
---
# blue 버전 서비스
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-blue
spec:
  selector:
    app: spring-boot-rest
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 8080
---
# green 버전 서비스
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest-green
spec:
  selector:
    app: spring-boot-rest
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 8080
---
# 내부 공용 서비스
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-rest
spec:
  selector:
    app: spring-boot-rest
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: 8080
