operations/blue-green-with-istio/istio_resources.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bxcr-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: spring-boot-rest
    version: v1
  name: spring-boot-rest-ew
  namespace: default
spec:
  gateways:
  - mesh
  hosts:
  - spring-boot-rest.default.svc.cluster.local
  - spring-boot-rest-blue.default.svc.cluster.local
  - spring-boot-rest-green.default.svc.cluster.local
  http:
  - match:
    - headers:
        bxcr-user:
          exact: smartkuk
    route:
      - destination:
          host: spring-boot-rest-green.default.svc.cluster.local
  - route:
    - destination:
        host: spring-boot-rest-blue.default.svc.cluster.local
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  labels:
    app: spring-boot-rest
    version: v1
  name: spring-boot-rest-ns
  namespace: default
spec:
  gateways:
  - istio-system/bxcr-gateway
  hosts:
  - '*'
  http:
  - match:
    - headers:
        bxcr-user:
          exact: smartkuk
      uri:
        prefix: /default/spring-boot-rest/
    rewrite:
      uri: /
    route:
    - destination:
        host: spring-boot-rest-green.default.svc.cluster.local
  - match:
    - uri:
        prefix: /default/spring-boot-rest/
    rewrite:
      uri: /
    route:
    - destination:
        host: spring-boot-rest-blue.default.svc.cluster.local
